--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,10 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+kapt.incremental.apt=true
+kapt.use.worker.api=true
+kapt.include.compile.classpath=false
+
+android.databinding.incremental=true
+android.lifecycleProcessor.incremental=true
