Adds proof of concept of tooltip

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     // Zoom layout
     implementation 'com.otaliastudios:zoomlayout:1.7.0'
 
+    implementation "com.github.skydoves:balloon:1.0.9"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
